--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# Godot 4+ specific ignores
+# https://github.com/github/gitignore/blob/main/Godot.gitignore
+.godot/
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
+
+# Unity Gitignore
+
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
